@@ -94,6 +94,10 @@ Changed:
  - Water-filled Fluid Blob harms entities sensitive to water and douses entities
  - Lava-filled fluid blob now lights certain blocks, opposite to water's effects
  - Potion-filled Fluid Blob applies its effect to entities while in flight
+- Improved quick firing breech opening effects
+ - Add more particles on opening and give them a bit of velocity
+ - Add a short pickup delay for ejected items, can be configured on server
+ - Can configure between item going directly into inventory and dropping item, default latter
 Fixed:
 - Fixed invalid cannon propellant combinations due to spelling mistake in data pack folder name
 - Fixed cannon loader pushing without head
